--- a/mod2_sol/css/styles.css
+++ b/mod2_sol/css/styles.css
@@ -1,5 +1,64 @@
 h1 {
 	text-align: center;
-	font-family: "Times New Roman", Times, serif;
-	font-size: large;
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-size: x-large;
+	margin-bottom: 30px;
+}
+
+p {
+	background-color: gray;
+	border: 2px solid black;
+	padding: 10px;
+	margin: 30px;
+	box-sizing: border-box;
+	float: left;
+}
+
+span {
+	width: 50px;
+	height: 20px;
+	border: 1px;
+	padding: 2px;
+	box-sizing: border-box;
+	float: right;
+}
+
+#beef {
+	background-color: #DEB887;
+}
+
+#chicken {
+	background-color: #A52A2A;
+}
+
+#sushi {
+	background-color: #FF7F50;
+}
+
+@media (min-width: 992px) {
+	.firstline{
+		width: 33%;
+	}
+
+	.secondline{
+		width: 33%;
+	}
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+	.firstline{
+		width: 50%;
+	}
+	.secondline{
+		width: 100%;
+	}
+}
+
+@media (max-width: 767px) {
+	.firstline{
+		width: 100%;
+	}
+	.secondline{
+		width: 100%;
+	}
 }
