--- a/mod2_sol/css/styles.css
+++ b/mod2_sol/css/styles.css
@@ -6,33 +6,42 @@ h1 {
 }
 
 p {
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-size: 12px;
 	background-color: gray;
 	border: 2px solid black;
 	padding: 10px;
-	margin: 30px;
+	margin: 15px;
 	box-sizing: border-box;
 	float: left;
 }
 
 span {
-	width: 50px;
-	height: 20px;
-	border: 1px;
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-size: 16px;
+	text-align: center;
+
+	position: relative;
+	bottom: 12px;
+	left: 12px;
+	
+	border: 1px solid black;
 	padding: 2px;
 	box-sizing: border-box;
 	float: right;
 }
 
-#beef {
+#chicken {
 	background-color: #DEB887;
 }
 
-#chicken {
+#beef {
 	background-color: #A52A2A;
+	color: white;
 }
 
 #sushi {
-	background-color: #FF7F50;
+	background-color: white;
 }
 
 @media (min-width: 992px) {
